 cnp-mitre-t1571-postgresql-ingress-y99l31q.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-mitre-t1571-postgresql-ingress-97bk73r
  namespace: kube-system
spec:
  description: "Allow ingress communication only through standard ports of PostgresSQL" 
  endpointSelector:
    matchLabels:
      controller-revision-hash: 56889964d4
      k8s-app: cilium
      pod-template-generation: 1
  ingress:
  - toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
